--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     }
   },
   "scripts": {
-    "download:ldraw": "tsx scripts/download-ldraw-parts.ts",
-    "build": "tsc --noEmit && cross-env INPUT=mcp-app.html vite build && tsc -p tsconfig.server.json && esbuild server.ts --bundle --platform=node --format=esm --outfile=dist/server.js --external:express --external:cors --external:@modelcontextprotocol/sdk --external:@modelcontextprotocol/ext-apps --external:zod && esbuild main.ts --bundle --platform=node --format=esm --outfile=dist/index.js --external:./server.js --external:express --external:cors --external:@modelcontextprotocol/sdk --external:@modelcontextprotocol/ext-apps --banner:js=\"#!/usr/bin/env node\"",
+    "generate:index": "tsx scripts/generate-parts-index.ts",
+    "download:ldraw": "tsx scripts/download-ldraw-parts.ts && npm run generate:index",
+    "build": "npm run generate:index && tsc --noEmit && cross-env INPUT=mcp-app.html vite build && tsc -p tsconfig.server.json && esbuild server.ts --bundle --platform=node --format=esm --outfile=dist/server.js --external:express --external:cors --external:@modelcontextprotocol/sdk --external:@modelcontextprotocol/ext-apps --external:zod && esbuild main.ts --bundle --platform=node --format=esm --outfile=dist/index.js --external:./server.js --external:express --external:cors --external:@modelcontextprotocol/sdk --external:@modelcontextprotocol/ext-apps --banner:js=\"#!/usr/bin/env node\"",
     "build:client": "cross-env INPUT=mcp-app.html vite build",
     "watch": "cross-env INPUT=mcp-app.html vite build --watch",
     "serve": "tsx --watch main.ts",
